@@ -94,7 +94,7 @@ public class MemberServlet extends HttpServlet {
 
 			try {
 				/*************************** 1.接收請求參數 ****************************************/
-				Integer memberid = new Integer(req.getParameter("memberid"));
+				Integer memberid = Integer.valueOf(req.getParameter("memberid").trim());
 
 				/*************************** 2.開始查詢資料 ****************************************/
 				MemberService memberSvc = new MemberService();
@@ -113,12 +113,11 @@ public class MemberServlet extends HttpServlet {
 				failureView.forward(req, res);
 			}
 		}
-
-		if ("update".equals(action)) { // 來自update_member_input.jsp的請求
+		
+		if ("update".equals(action)) { 
 
 			List<String> errorMsgs = new LinkedList<String>();
-			// Store this set in the request scope, in case we need to
-			// send the ErrorPage view.
+			
 			req.setAttribute("errorMsgs", errorMsgs);
 
 			try {
@@ -126,7 +125,122 @@ public class MemberServlet extends HttpServlet {
 
 				// 回傳 memberid(隱藏),lastname, firstname, idno, gender, dateofbirth, 沒有Email
 
-//Integer memberid = new Integer(req.getParameter("memberid").trim());
+				Integer memberid = Integer.valueOf(req.getParameter("memberid").trim());
+				
+				String email = req.getParameter("email");
+				String emailReg = "^([A-Za-z0-9_\\-\\.])+\\@([A-Za-z0-9_\\-\\.])+\\.([A-Za-z]{2,4})$";
+				if (email == null || email.trim().length() == 0) {
+					errorMsgs.add("帳號: 請勿空白");
+				} else if (!email.trim().matches(emailReg)) {
+					errorMsgs.add("帳號: 請輸入英文字母、數字和 _ , - 且含@ + 信箱網域");
+				}
+				
+				String password = req.getParameter("password");
+				String pwdReg = "^([A-Za-z0-9]){1,20}$";
+				if (password == null || password.trim().length() == 0) {
+					errorMsgs.add("密碼: 請勿空白");
+				} else if (!password.trim().matches(pwdReg)) {
+					errorMsgs.add("密碼: 請輸入英文字母、數字 且1~20個字");
+				}
+				
+				String lastname = req.getParameter("lastname");
+				String lnameReg = "^[(\u4e00-\u9fa5)(a-zA-Z0-9_)]{1,20}$";
+				if (lastname == null || lastname.trim().length() == 0) {
+					errorMsgs.add("姓氏: 請勿空白");
+				} else if (!lastname.trim().matches(lnameReg)) { // 以下練習正則(規)表示式(regular-expression)
+					errorMsgs.add("姓氏: 只能是中、英文字母、數字和_ , 且長度必需在1到20之間");
+				}
+				
+				String firstname = req.getParameter("firstname");
+				String fnameReg = "^[(\u4e00-\u9fa5)(a-zA-Z0-9_)]{1,20}$";
+				if (firstname == null || firstname.trim().length() == 0) {
+					errorMsgs.add("名字: 請勿空白");
+				} else if (!firstname.trim().matches(fnameReg)) { // 以下練習正則(規)表示式(regular-expression)
+					errorMsgs.add("名字: 只能是中、英文字母、數字和_ , 且長度必需在1到20之間");
+				}
+				
+				String idno = req.getParameter("idno");
+				String idnoReg = "^[a-zA-Z]\\d{9}$";
+				if (idno == null || idno.trim().length() == 0) {
+					errorMsgs.add("身分證字號: 請勿空白");
+				} else if (!idno.trim().matches(idnoReg)) { // 以下練習正則(規)表示式(regular-expression)
+					errorMsgs.add("身分證字號: 英文字母、數字 , 且長度必需在10");
+				}
+				
+				String gender = req.getParameter("gender").trim();
+
+				java.sql.Date dateofbirth = null;
+				try {
+					dateofbirth = java.sql.Date.valueOf(req.getParameter("dateofbirth").trim());
+				} catch (IllegalArgumentException e) {
+
+					dateofbirth = new java.sql.Date(System.currentTimeMillis());
+					errorMsgs.add("請輸入日期!");
+				}
+				
+				String country = req.getParameter("country").trim();
+
+				String phone = req.getParameter("phone").trim();
+				String phoneReg = "^09[0-9]{8}$";
+				if (phone == null || phone.trim().length() == 0) {
+					errorMsgs.add("手機: 請勿空白");
+				} else if (!phone.trim().matches(phoneReg)) {
+					errorMsgs.add("手機: 輸入開頭09 + 8碼數字");
+				}
+				
+				MemberVO memberVO = new MemberVO();
+				memberVO.setMemberid(memberid);
+				memberVO.setEmail(email);
+				memberVO.setPassword(password);				
+				memberVO.setLastname(lastname);
+				memberVO.setFirstname(firstname);
+				memberVO.setIdno(idno);
+				memberVO.setGender(gender);
+				memberVO.setDateofbirth(dateofbirth);
+				memberVO.setCountry(country);
+				memberVO.setPhone(phone);
+
+				// Send the use back to the form, if there were errors
+				if (!errorMsgs.isEmpty()) {
+					System.out.println(errorMsgs);
+					req.setAttribute("memberVO", memberVO); // 含有輸入格式錯誤的memberVO物件,也存入req
+					RequestDispatcher failureView = req.getRequestDispatcher("/download/BS-edit-member.jsp");
+					failureView.forward(req, res);
+					return; // 程式中斷
+				}
+
+				/*************************** 2.開始修改資料 *****************************************/
+				MemberService memberSvc = new MemberService();
+				memberSvc.updateMember(memberVO);
+
+				/*************************** 3.修改完成,準備轉交(Send the Success view) *************/
+				
+				String url = "/download/FS-my-profile.jsp";
+				RequestDispatcher successView = req.getRequestDispatcher(url); // 修改成功後,轉交BS-listOneMember.jsp
+				successView.forward(req, res);
+
+//				String url = "/download/BS-member_manage.jsp";
+//				res.sendRedirect(req.getContextPath()+url);
+
+				/*************************** 其他可能的錯誤處理 *************************************/
+			} catch (Exception e) {
+				errorMsgs.add("修改資料失敗:" + e.getMessage());
+				RequestDispatcher failureView = req.getRequestDispatcher("/download/BS-edit-member.jsp");
+				failureView.forward(req, res);
+			}
+		}
+
+		if ("updateB".equals(action)) { 
+
+			List<String> errorMsgs = new LinkedList<String>();
+			
+			req.setAttribute("errorMsgs", errorMsgs);
+
+			try {
+				/*************************** 1.接收請求參數 - 輸入格式的錯誤處理 **********************/
+
+				// 回傳 memberid(隱藏),lastname, firstname, idno, gender, dateofbirth, 沒有Email
+
 				Integer memberid = Integer.valueOf(req.getParameter("memberid").trim());
 
 				String lastname = req.getParameter("lastname");
@@ -170,11 +284,10 @@ public class MemberServlet extends HttpServlet {
 				String phoneReg = "^09[0-9]{8}$";
 				if (phone == null || phone.trim().length() == 0) {
 					errorMsgs.add("手機: 請勿空白");
-				} else if (!phone.trim().matches(phoneReg)) { // 以下練習正則(規)表示式(regular-expression)
+				} else if (!phone.trim().matches(phoneReg)) {
 					errorMsgs.add("手機: 輸入開頭09 + 8碼數字");
 				}
-
-				// Pack into memberVO
+				
 				MemberVO memberVO = new MemberVO();
 				memberVO.setMemberid(memberid);
 				memberVO.setLastname(lastname);
@@ -196,8 +309,7 @@ public class MemberServlet extends HttpServlet {
 
 				/*************************** 2.開始修改資料 *****************************************/
 				MemberService memberSvc = new MemberService();
-				memberVO = memberSvc.updateMember(memberid, lastname, firstname, idno, gender, dateofbirth, country,
-						phone);
+				memberSvc.updateMember(memberVO);
 
 				/*************************** 3.修改完成,準備轉交(Send the Success view) *************/
 				req.setAttribute("memberVO", memberVO); // 資料庫update成功後,正確的的memberVO物件,存入req
@@ -216,7 +328,7 @@ public class MemberServlet extends HttpServlet {
 			}
 		}
 
-		if ("insert".equals(action)) { // 來自BS-add-member.jsp的請求
+		if ("insert".equals(action)) {
 
 			List<String> errorMsgs = new LinkedList<String>();
 			// Store this set in the request scope, in case we need to
@@ -297,7 +409,7 @@ public class MemberServlet extends HttpServlet {
 				// Send the use back to the form, if there were errors
 				if (!errorMsgs.isEmpty()) {
 					System.out.println(errorMsgs);
-					req.setAttribute("memberVO", memberVO); // 含有輸入格式錯誤的memberVO物件,也存入req
+					req.setAttribute("memberVO", memberVO);
 					RequestDispatcher failureView = req.getRequestDispatcher("/download/BS-add-member.jsp");
 					failureView.forward(req, res);
 					return; // 程式中斷
@@ -305,8 +417,7 @@ public class MemberServlet extends HttpServlet {
 
 				/*************************** 2.開始修改資料 *****************************************/
 				MemberService memberSvc = new MemberService();
-				memberVO = memberSvc.addMember(email, password, firstname, lastname, idno, gender, dateofbirth, country,
-						phone, nickname, selfintro);
+				memberSvc.addMember(memberVO);
 
 				/*************************** 3.新增完成,準備轉交(Send the Success view) ***********/
 //				String url = "/download/BS-member_manage.jsp";				
@@ -338,7 +449,7 @@ public class MemberServlet extends HttpServlet {
 
 			try {
 				/*************************** 1.接收請求參數 ***************************************/
-				Integer memberid = new Integer(req.getParameter("memberid"));
+				Integer memberid = Integer.valueOf(req.getParameter("memberid").trim());
 
 				/*************************** 2.開始刪除資料 ***************************************/
 				MemberService memberSvc = new MemberService();
